# biblioteca-python

projetoBiblio/: alembic.ini  pyproject.toml  test.py
projetoBiblio/alembic/: env.py
projetoBiblio/app/: __init__.py  main.py
projetoBiblio/app/Livro/: api.py  models.py
projetoBiblio/app/api/: livro_router.py
projetoBiblio/app/core/: config.py  db.py  models.py
projetoBiblio/app/emprestimo/: models.py
projetoBiblio/app/pessoas/: api.py  models.py
projetoBiblio/app/router/: endpoints.py
projetoBiblio/app/testepacote/: teste.py
projetoBiblio/myproject.egg-info/: SOURCES.txt
projetoBiblioV2/: pyproject.toml
projetoBiblioV2/backend/alembic/: env.py
projetoBiblioV2/backend/alembic/versions/: c82c6f5d536a_adicionando_notadepagamento_id.py
projetoBiblioV2/backend/app/: __init__.py  main.py
projetoBiblioV2/backend/app/api/: admin.py  devolucao.py  emprestimo.py  livro.py  notaDePagamento.py  reserva.py  usuario.py
projetoBiblioV2/backend/app/core/: db.py
projetoBiblioV2/backend/app/router/: endpoints.py
projetoBiblioV2/backend/app/schemas/: models.py
projetoBiblioV3/biblioteca/: alembic.ini  pyproject.toml
projetoBiblioV3/biblioteca/alembic/: env.py
projetoBiblioV3/biblioteca/alembic/versions/: 1c03b39ffa4e_arrumar_relationship.py  204cc7c83650_muitos_pra_muitos_e_emprestimo.py  5aaeecfa7128_adicionando_devolucao.py  827af55d8ee0_please_work.py  b917e9f9f8e1_adicionando_reserva.py  d4a74ccba648_enum_teste.py  d83e13ab8149_please_work.py  (+2 more)
projetoBiblioV3/biblioteca/backend/: .env
projetoBiblioV3/sql_dump/: test4script  teste3.txt  testescript.sql  testescript2.sql
projetoBiblioV3/versions/: 099c6456c06f_datetime_no_emprestimo.py  19d710c2584c_excluir_admin.py  470b0beff532_devolucao_nota_de_pagamente_opcional.py  ac885f826bf1_testando.py
projetoPoetry/: pyproject.toml
(+15 files in other folders)
