[tool.poetry]
name = "projetobibliov2"
version = "0.1.0"
description = ""
authors = ["José Matheus R. Flora <jmrfloraxbox@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.2"
python-dotenv = "^1.0.0"
sqlmodel = "^0.0.8"
uvicorn = "^0.23.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
